@@ -47,6 +47,8 @@ xx/xx/2006 - 1.13.1-WIP
 	  attribute completely and index entry (filename) completely and all in
 	  correct order.  Essential for hunting bugs in directory operations
 	  code...  (Anton)
+	- ntfsmount: workaround for libfuse not being able to find fusermount
+	  when user uses mount(8).
 
 27/02/2006 - 1.13.0 - Lots and lots and lots of fixes and enhancements.
 
